excel单元格值添加空格前缀，保证数字不会被转为科学记数法格式

--- a/readme
+++ b/readme
@@ -87,7 +87,14 @@
 
         {
             "require": {
-                "aozeahj/excel-demo": "v0.1.1"
+                "aozeahj/excel-demo": "v0.1.2"
             }
         }
   
+  
+  
+###5. 使用须知
+
+* 维度行合并是只会合并邻近的相同维度值行，不会全局合并，这样数据排列的格式就由用户自定义，更加自由
+
+* 所有的单元格在插入值的时候，默认都加了一个 ' ' 空格前缀，这是为了避免数字输入过长（超过11位）被写成科学记数法格式，加上空格前缀的好处是，接收到的数据都会当作字符串，从而保证数据不变
