--- a/readme
+++ b/readme
@@ -29,7 +29,7 @@
         $save_path   = '/tmp' //excel 下载到本地，存放地址
         $is_down     = true //是否直接下载，true：直接web下载， false：保存到本地
         
-        $powerExcel->singleSheet($sheet_title, $sheet_data, $sheet_name, $filename, $save_path, $is_down);
+        $powerExcel->singleSheet($sheet_title, $sheet_data, $filename, $sheet_name, $save_path, $is_down);
 
 
         //生成包含多个sheet excel文件
@@ -60,7 +60,7 @@
         $save_path   = '/tmp' //excel 下载到本地，存放地址
         $is_down     = true //是否直接下载，true：直接web下载， false：保存到本地
         
-        $powerExcel->singleSheet($sheet_title, $dim_cnt, $sheet_data, $sheet_name, $filename, $save_path, $is_down);
+        $powerExcel->singleSheet($sheet_title, $dim_cnt, $sheet_data, $filename, $sheet_name, $save_path, $is_down);
 
 
         //生成包含多个sheet excel文件
@@ -81,13 +81,13 @@
       
 ###4. 使用composer 加载
 
-* 在composer.json require 中天添加 ` "aozeahj/excel-demo": "v0.1.1" `
+* 在composer.json require 中天添加 ` "aozeahj/excel-demo": "v0.1.3" `
 
 * 运行命令 composer update
 
         {
             "require": {
-                "aozeahj/excel-demo": "v0.1.2"
+                "aozeahj/excel-demo": "v0.1.3"
             }
         }
   
@@ -98,3 +98,5 @@
 * 维度行合并是只会合并邻近的相同维度值行，不会全局合并，这样数据排列的格式就由用户自定义，更加自由
 
 * 所有的单元格在插入值的时候，默认都加了一个 ' ' 空格前缀，这是为了避免数字输入过长（超过11位）被写成科学记数法格式，加上空格前缀的好处是，接收到的数据都会当作字符串，从而保证数据不变
+
+* excel文件中sheet名称，未传参数时，默认使用 sheet1，sheet2 .....
